[gd_scene load_steps=17 format=3 uid="uid://blqcb0l0orvyd"]

[ext_resource type="Script" uid="uid://b8yqm27gxxu13" path="res://UI_Overlay/room_edit.gd" id="1_nj71v"]
[ext_resource type="PackedScene" uid="uid://da7iilnykcq4j" path="res://UI_Overlay/Components/Room Resize.tscn" id="2_0hs0u"]
[ext_resource type="Texture2D" uid="uid://oshgb0l62w35" path="res://UI_Overlay/Sprites/Navigation/image-removebg-preview (1).png" id="2_psi8o"]
[ext_resource type="Script" uid="uid://mtfj8vk0klca" path="res://UI_Overlay/Scripts/mouse_controller.gd" id="3_4h6r5"]
[ext_resource type="Texture2D" uid="uid://dwkaad7lr70x7" path="res://UI_Overlay/Sprites/Navigation/D Pad Left.png" id="4_7klyh"]
[ext_resource type="Texture2D" uid="uid://bj6xy0ui1q8ph" path="res://UI_Overlay/Sprites/Navigation/D Pad Right.png" id="5_cwljl"]
[ext_resource type="PackedScene" uid="uid://kfopx43ychj1" path="res://UI_Overlay/Components/Tab Select.tscn" id="5_dgyqn"]
[ext_resource type="PackedScene" uid="uid://ca7m56xpyjn3v" path="res://UI_Overlay/Components/Edit Object.tscn" id="6_a5xhx"]
[ext_resource type="Texture2D" uid="uid://c4cpavnmor4na" path="res://UI_Overlay/Sprites/Navigation/Screenshot__93_-removebg-preview__1_-removebg-preview.png" id="6_cwljl"]
[ext_resource type="Texture2D" uid="uid://0tn67am0hfy0" path="res://UI_Overlay/Sprites/Navigation/Y__4_-removebg-preview.png" id="7_cwljl"]
[ext_resource type="Texture2D" uid="uid://jkwua2p746x1" path="res://UI_Overlay/Sprites/Navigation/output-onlinepngtools (3).png" id="8_0gfxg"]
[ext_resource type="Texture2D" uid="uid://8tucvtod1kw3" path="res://UI_Overlay/Sprites/Navigation/MinusButton.png" id="8_fy1l1"]
[ext_resource type="Texture2D" uid="uid://bkwko0m458hly" path="res://UI_Overlay/Sprites/Navigation/PlusButton.png" id="10_6tyiu"]
[ext_resource type="Texture2D" uid="uid://bhdhqqhpmxvys" path="res://UI_Overlay/Sprites/Navigation/output-onlinepngtools (1).png" id="12_rljeo"]
[ext_resource type="Texture2D" uid="uid://pv82pscn84ce" path="res://UI_Overlay/Sprites/Navigation/output-onlinepngtools.png" id="14_dr8g6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6oho"]
size = Vector2(20, 21)

[node name="UiOverlay" type="Control"]
editor_description = "This control node acts as the state machine between the overlay ui elements during runtime.

Open code for details
"
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nj71v")

[node name="RoomResize" parent="." instance=ExtResource("2_0hs0u")]
visible = false
layout_mode = 0
offset_right = 585.0

[node name="TabSelect" parent="." instance=ExtResource("5_dgyqn")]
visible = false
layout_mode = 1
offset_left = -31.0
offset_top = 0.0
offset_right = 281.0
offset_bottom = 133.0
current_tab = 4

[node name="TabSelectControls" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 125.0
offset_right = 228.0
offset_bottom = 337.0

[node name="Navigate Tab" type="HBoxContainer" parent="TabSelectControls"]
layout_mode = 2

[node name="Left" type="TextureRect" parent="TabSelectControls/Navigate Tab"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("4_7klyh")
expand_mode = 1

[node name="Right" type="TextureRect" parent="TabSelectControls/Navigate Tab"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("5_cwljl")
expand_mode = 1

[node name="Label" type="Label" parent="TabSelectControls/Navigate Tab"]
layout_mode = 2
text = "Navigate Tabs"

[node name="Navigate Objects" type="HBoxContainer" parent="TabSelectControls"]
layout_mode = 2

[node name="Select" type="TextureRect" parent="TabSelectControls/Navigate Objects"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("6_cwljl")
expand_mode = 1

[node name="Label" type="Label" parent="TabSelectControls/Navigate Objects"]
layout_mode = 2
text = "Navigate Objects"

[node name="Select Object" type="HBoxContainer" parent="TabSelectControls"]
layout_mode = 2

[node name="Select" type="TextureRect" parent="TabSelectControls/Select Object"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("7_cwljl")
expand_mode = 1

[node name="Label" type="Label" parent="TabSelectControls/Select Object"]
layout_mode = 2
text = "Select Object"

[node name="Go To Wall Node" type="HBoxContainer" parent="TabSelectControls"]
layout_mode = 2

[node name="Select" type="TextureRect" parent="TabSelectControls/Go To Wall Node"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("8_0gfxg")
expand_mode = 1

[node name="Label" type="Label" parent="TabSelectControls/Go To Wall Node"]
layout_mode = 2
text = "Go to Edit Mode"

[node name="Mouse" type="Marker2D" parent="."]
visible = false
position = Vector2(148, 69)
script = ExtResource("3_4h6r5")

[node name="Mouse" type="TextureRect" parent="Mouse"]
offset_left = -17.0
offset_top = -7.0
offset_right = 27.0
offset_bottom = 40.0
pivot_offset = Vector2(16, 6)
texture = ExtResource("2_psi8o")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="Mouse/Mouse"]
position = Vector2(17, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse/Mouse/Area2D"]
shape = SubResource("RectangleShape2D_e6oho")

[node name="EditObject" parent="." instance=ExtResource("6_a5xhx")]
editor_description = "When in the Edit_Objects enum in the UiOverlay State machine this object deals with selecting and moving objects already in the scene."
visible = false
layout_mode = 1

[node name="ResizePrompt" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 35.0
offset_right = 113.0
offset_bottom = 124.0
texture = ExtResource("12_rljeo")
expand_mode = 1

[node name="Button" type="TextureRect" parent="ResizePrompt"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.746
anchor_top = 0.718
anchor_right = 0.746
anchor_bottom = 0.718
offset_left = -9.172
offset_top = -6.05601
offset_right = 30.828
offset_bottom = 33.944
texture = ExtResource("8_fy1l1")
expand_mode = 1

[node name="PlaceObjectsPrompt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_top = 10.0
offset_right = -23.0
offset_bottom = 111.0
grow_horizontal = 0
texture = ExtResource("14_dr8g6")
expand_mode = 1

[node name="Button" type="TextureRect" parent="PlaceObjectsPrompt"]
layout_mode = 0
offset_left = -28.0
offset_top = 57.0
offset_right = 28.0
offset_bottom = 105.0
texture = ExtResource("10_6tyiu")
expand_mode = 1

[connection signal="is_wall_change" from="." to="EditObject" method="_on_ui_overlay_is_wall_change"]
[connection signal="is_wall_change" from="TabSelect" to="." method="_on_tab_select_is_wall_change"]
[connection signal="area_entered" from="Mouse/Mouse/Area2D" to="." method="_on_area_2d_area_entered"]
